--- a/_community-of-success/collection.yml
+++ b/_community-of-success/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Community of Success.md
+      - Our Pulse/Community of Success stories.md
       - Our Pulse/.keep
       - Our Pulse/Language & Culture.md
       - Our Pulse/Education.md
