{"message":"Update file: collection.yml","userId":"978","fileName":"collection.yml"}

--- a/_community-of-success/collection.yml
+++ b/_community-of-success/collection.yml
@@ -9,7 +9,7 @@ collections:
       - Our Pulse/Socio Religious.md
       - Our Pulse/Social & Health Development.md
       - Our Pulse/Arts & Sports.md
-      - Our Pulse/Community of Success stories.md
+      - Our Pulse/News Gallery.md
       - InspirasiSG/.keep
       - InspirasiSG/InspirasiSG.md
       - InspirasiSG/InspirasiSG Stories.md
