--- a/_community-of-success/collection.yml
+++ b/_community-of-success/collection.yml
@@ -2,6 +2,7 @@ collections:
   community-of-success:
     output: true
     order:
+      - News Gallery.md
       - Community of Success.md
       - Our Pulse/.keep
       - Our Pulse/Language & Culture.md
