{"message":"Update file: collection.yml","userId":"978","fileName":"collection.yml"}

--- a/_community-of-success/collection.yml
+++ b/_community-of-success/collection.yml
@@ -2,6 +2,7 @@ collections:
   community-of-success:
     output: true
     order:
+      - News Gallery/2020.md
       - News Gallery/2019.md
       - News Gallery/2018.md
       - News Gallery/.keep
