{"message":"Update file: collection.yml","userId":"978","fileName":"collection.yml"}

--- a/_community-of-success/collection.yml
+++ b/_community-of-success/collection.yml
@@ -9,6 +9,7 @@ collections:
       - Our Pulse/Socio Religious.md
       - Our Pulse/Social & Health Development.md
       - Our Pulse/Arts & Sports.md
+      - News Gallery/2024.md
       - News Gallery/.keep
       - News Gallery/2023.md
       - News Gallery/2022.md
