{"message":"Update file: _config.yml","userId":"978","fileName":"_config.yml"}

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: M³
 url: https://www.m3.gov.sg
-favicon: /images/favicon-isomer.ico
+favicon: /images/M3-Logo.svg
 colors:
   primary-color: "#1b8d7b"
   secondary-color: "#3f3b8e"
