--- a/_community-of-success/collection.yml
+++ b/_community-of-success/collection.yml
@@ -2,6 +2,7 @@ collections:
   community-of-success:
     output: true
     order:
+      - Community Of Success Stories/Community Of Success Stories.md
       - Community Of Success Stories/.keep
       - Our Pulse/.keep
       - Our Pulse/Language & Culture.md
