{"message":"Update file: collection.yml","userId":"40083","fileName":"collection.yml"}

--- a/_community-of-success/collection.yml
+++ b/_community-of-success/collection.yml
@@ -2,7 +2,7 @@ collections:
   community-of-success:
     output: true
     order:
-      - Community Of Success Stories/.keep
+      - Community Of Success/.keep
       - Our Pulse/.keep
       - Our Pulse/Language & Culture.md
       - Our Pulse/Education.md
