{"message":"Update file: collection.yml","userId":"40083","fileName":"collection.yml"}

--- a/_community-of-success/collection.yml
+++ b/_community-of-success/collection.yml
@@ -2,6 +2,7 @@ collections:
   community-of-success:
     output: true
     order:
+      - Community Of Success/Community of Success.md
       - Community Of Success/Community of Success Stories.md
       - Community Of Success/.keep
       - Our Pulse/.keep
