--- a/_focus-areas/collection.yml
+++ b/_focus-areas/collection.yml
@@ -2,7 +2,7 @@ collections:
   focus-areas:
     output: true
     order:
-      - Marriage, Parenthood and Early Childhood.md
+      - Supporting Families through Marriage, Parenthood and Early Childhood.md
       - Vulnerable Individuals and Families.md
       - Empowering and Mentoring Our Youths.md
       - Employment and Employability.md
