--- a/_focus-areas/collection.yml
+++ b/_focus-areas/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - Supporting Families through Marriage, Parenthood and Early Childhood.md
-      - Vulnerable Individuals and Families.md
+      - Supporting Vulnerable Individuals and Families.md
       - Empowering and Mentoring Our Youths.md
       - Employment and Employability.md
       - A Healthy Community for All.md
