{"message":"Update file: collection.yml","userId":"4937","fileName":"collection.yml"}

--- a/_focus-areas/collection.yml
+++ b/_focus-areas/collection.yml
@@ -6,5 +6,5 @@ collections:
       - Supporting Vulnerable Individuals and Families.md
       - Empowering and Mentoring Our Youths.md
       - Employment and Employability.md
-      - A Healthy Community for All.md
+      - Creating A Healthy Community for All.md
       - M³ Focus Areas/.keep
