--- a/_community-of-success/collection.yml
+++ b/_community-of-success/collection.yml
@@ -4,7 +4,7 @@ collections:
     order:
       - Our Community Of Success/.keep
       - Our Community Of Success/About Our Community of Success.md
-      - Our Community Of Success/Community of Success Stories.md
+      - Our Community Of Success/Our Community of Success Stories.md
       - Our Pulse/.keep
       - Our Pulse/Language & Culture.md
       - Our Pulse/Education.md
